--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
+    "@uidotdev/usehooks": "^2.0.1",
     "firebase": "^10.1.0",
     "install": "^0.13.0",
     "nanoid": "^4.0.2",
@@ -18,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-use-measure": "^2.1.1",
     "use-long-press": "^3.1.5"
   },
   "devDependencies": {
